hphp/test/zend/good/errmsg_037.php
<?php

class test {
	abstract $var = 1;
}

echo "Done\n";
?>