hphp/test/zend/bad/Zend/tests/heredoc_013.php
<?php
$test = "foo";
$var = prefix<<<"MYLABEL"
test: $test
MYLABEL;
echo $var;
?>